--- a/dockge/compose.yaml
+++ b/dockge/compose.yaml
@@ -5,7 +5,7 @@ services:
     networks:
         - caddy
     labels:
-      caddy: stack.bitzz.de
+      caddy: stack.ascyii.de
       caddy.reverse_proxy: "{{upstreams 5001}}"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
