--- a/stacks/nextcloud/compose.yaml
+++ b/stacks/nextcloud/compose.yaml
@@ -7,7 +7,7 @@ services:
     networks:
       - caddy
     labels:
-      caddy: cloud.bitzz.de
+      caddy: cloud.ascyii.de
       caddy.reverse_proxy: "{{upstreams 11000}}"
     volumes:
       - nextcloud_aio_mastercontainer:/mnt/docker-aio-config
