Update stacks to be fully managed by docker volumes

--- a/stacks/dockge/compose.yaml
+++ b/stacks/dockge/compose.yaml
@@ -9,11 +9,14 @@ services:
       caddy.reverse_proxy: "{{upstreams 5001}}"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./data:/app/data
-      - ./stacks:/stacks
+      - data:/app/data
+      - ../:/stacks
     environment:
       - DOCKGE_STACKS_DIR=/stacks
 
 networks:
   caddy:
     external: true
+
+volumes:
+  data: {}
