--- a/stacks/proxy/compose.yaml
+++ b/stacks/proxy/compose.yaml
@@ -7,12 +7,9 @@ services:
       - '81:81'
       - '443:443'
     volumes:
-      - data/data:/data
-      - data/letsencrypt:/etc/letsencrypt
+      - data:/data
+      - encrypt:/etc/letsencrypt
 
 volumes:
   data: {}
-  
-networks:
-  npm:
-    external: true
+  encrypt: {}
