--- a/stacks/lldap/compose.yaml
+++ b/stacks/lldap/compose.yaml
@@ -8,11 +8,18 @@ services:
   lldap:
     image: lldap/lldap:stable
     ports:
+      - 3890:3890
       - 17170:17170
     volumes:
       - lldap_data:/data
+    networks:
+      - nextcloud-aio
     environment:
       - LLDAP_JWT_SECRET=secret
       - LLDAP_KEY_SEED=secret
       - LLDAP_LDAP_BASE_DN=dc=ascyii,dc=de
-      - LLDAP_LDAP_USER_PASS=admin
+      - LLDAP_LDAP_USER_PASS=adminadmin
+
+networks:
+  nextcloud-aio:
+    external: true
